--- a/index.html
+++ b/index.html
@@ -1,12 +1,115 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Luna Rose</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Luna Rose - Mental Health Support App</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #2E1F47;
+      color: #FFFFFF;
+    }
+
+    header {
+      background-color: #957DAD;
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 36px;
+    }
+
+    section {
+      padding: 40px 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    section h2 {
+      color: #E0BBE4;
+      margin-bottom: 20px;
+    }
+
+    .features ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .features li {
+      margin-bottom: 10px;
+    }
+
+    .screenshots {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
+    }
+
+    .screenshots img {
+      width: 180px;
+      height: auto;
+      border-radius: 8px;
+      box-shadow: 0 0 10px #000;
+    }
+
+    footer {
+      text-align: center;
+      padding: 30px;
+      font-size: 14px;
+      background-color: #1E1232;
+    }
+
+    a {
+      color: #FFD700;
+      text-decoration: none;
+    }
+  </style>
 </head>
-<body style="background-color:#2E1F47; color:#fff; text-align:center; padding:40px; font-family:sans-serif;">
-  <h1>🌙 Luna Rose</h1>
-  <p>Mental health support for young adults. Landing page coming soon.</p>
+<body>
+  <header>
+    <h1>🌙 Luna Rose</h1>
+    <p>Your mental health companion</p>
+  </header>
+
+  <section class="about">
+    <h2>About</h2>
+    <p>Luna Rose is a safe space for young adults and teens to reflect, heal, and grow. Our app offers guided meditation, mood tracking, AI chat support, and more — all designed to support emotional wellness.</p>
+  </section>
+
+  <section class="features">
+    <h2>Features</h2>
+    <ul>
+      <li>💬 AI Chat with memory & tone-adaptive support</li>
+      <li>📅 Mood Tracking with insights and charts</li>
+      <li>🧘 Guided Breathing & Meditation</li>
+      <li>📓 Journaling & CBT Tools</li>
+      <li>🏅 Badges for motivation & progress</li>
+      <li>🆘 Built-in crisis support resources</li>
+    </ul>
+  </section>
+
+  <section class="screenshots">
+    <h2>App Screenshots</h2>
+    <img src="https://via.placeholder.com/180x360.png?text=Welcome+Screen" alt="Welcome Screen" />
+    <img src="https://via.placeholder.com/180x360.png?text=Mood+Tracker" alt="Mood Tracker" />
+    <img src="https://via.placeholder.com/180x360.png?text=AI+Chat" alt="AI Chat" />
+    <img src="https://via.placeholder.com/180x360.png?text=Meditation" alt="Meditation" />
+  </section>
+
+  <section class="contact">
+    <h2>Contact</h2>
+    <p>For questions, partnerships, or press: <a href="mailto:lunaroseaffiliate@gmail.com">lunaroseaffiliate@gmail.com</a></p>
+  </section>
+
+  <footer>
+    © 2025 Luna Rose · All rights reserved
+  </footer>
 </body>
 </html>
