--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -73,6 +72,9 @@
   </style>
 </head>
 <body>
+  <!-- Impact.com site verification -->
+  Impact-Site-Verification: 397d97ab-62db-49a8-990b-3d0947af6965
+
   <header>
     <h1>🌙 Luna Rose</h1>
     <p>Your mental health companion</p>
